# linear-regressions

./: README.md  pyproject.toml  regression.ipynb
