[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["ticochuck <chucklivilla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
matplotlib = "^3.2.2"
sklearn = "^0.0"
jupyter = "^1.0.0"
lab = "^6.0"
jupyterlab = "^2.1.5"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
